--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -6,6 +6,10 @@
   <title>Rock Paper Scissor</title>
 </head>
 <body>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <div style="padding-top: 20px;" class="results"></div>
   <script src="scripts/rock-paper-scissor.js"></script>
 </body>
 </html>
