Added div that shows moves

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <button id="rock">Rock</button>
   <button id="paper">Paper</button>
   <button id="scissors">Scissors</button>
-  <div style="padding-top: 20px;" class="results"></div>
+  <div style="padding-top: 20px;" class="show-moves"></div>
+  <div style="padding-top: 10px;" class="results"></div>
   <script src="scripts/rock-paper-scissor.js"></script>
 </body>
 </html>
